--- a/translations/rbac.zh_CN.xlf
+++ b/translations/rbac.zh_CN.xlf
@@ -5,47 +5,47 @@
       <tool tool-id="symfony" tool-name="Symfony"/>
     </header>
     <body>
-      <trans-unit id="app_index">
+      <trans-unit id="iDyncvO" resname="app_index">
         <source>app_index</source>
         <target>RBAC</target>
       </trans-unit>
-      <trans-unit id="app_login">
+      <trans-unit id="pJUZhar" resname="app_login">
         <source>app_login</source>
         <target>RBAC / 登录</target>
       </trans-unit>
-      <trans-unit id="app_logout">
+      <trans-unit id="VqYZfLB" resname="app_logout">
         <source>app_logout</source>
         <target>RBAC / 退出</target>
       </trans-unit>
-      <trans-unit id="app_role">
+      <trans-unit id="Bg3pJN2" resname="app_role">
         <source>app_role</source>
         <target>RBAC / 角色</target>
       </trans-unit>
-      <trans-unit id="app_role_new">
+      <trans-unit id="MZZSJ6F" resname="app_role_new">
         <source>app_role_new</source>
         <target>RBAC / 角色 / 新增角色</target>
       </trans-unit>
-      <trans-unit id="app_role_edit">
+      <trans-unit id="F4KpYzS" resname="app_role_edit">
         <source>app_role_edit</source>
         <target>RBAC / 角色 / 编辑角色</target>
       </trans-unit>
-      <trans-unit id="app_role_delete">
+      <trans-unit id=".ZXC9eD" resname="app_role_delete">
         <source>app_role_delete</source>
         <target>RBAC / 角色 / 删除角色</target>
       </trans-unit>
-      <trans-unit id="app_user">
+      <trans-unit id="WErRkaP" resname="app_user">
         <source>app_user</source>
         <target>RBAC / 用户</target>
       </trans-unit>
-      <trans-unit id="app_user_new">
+      <trans-unit id="cfJI_GK" resname="app_user_new">
         <source>app_user_new</source>
         <target>RBAC / 用户 / 新增用户</target>
       </trans-unit>
-      <trans-unit id="app_user_edit">
+      <trans-unit id="tNTvlza" resname="app_user_edit">
         <source>app_user_edit</source>
         <target>RBAC / 用户 / 编辑用户</target>
       </trans-unit>
-      <trans-unit id="app_user_delete">
+      <trans-unit id="dGwWhS9" resname="app_user_delete">
         <source>app_user_delete</source>
         <target>RBAC / 用户 / 删除用户</target>
       </trans-unit>
